@@ -71,6 +71,7 @@ Image Settings:
   \-mask filename       associate a mask with the image
   \-matte               store matte channel if the image has one
   \-mattecolor color    frame color
+  \-metric type         measure differences between images with this metric
   \-monitor             monitor progress
   \-orient type         image orientation
   \-page geometry       size and location of an image canvas (setting)
@@ -265,6 +266,7 @@ Image Sequence Operators:
   \-clut                apply a color lookup table to the image
   \-coalesce            merge a sequence of images
   \-combine             combine a sequence of images
+  \-compare             mathematically and visually annotate the difference between an image and its reconstruction
   \-composite           composite image
   \-crop geometry       cut out a rectangular region of the image
   \-deconstruct         break down an image sequence into constituent parts
