@@ -67,6 +67,7 @@ Image Settings:
   \-mask filename       associate a mask with the image
   \-matte               store matte channel if the image has one
   \-mattecolor color    frame color
+  \-metric type         measure differences between images with this metric
   \-monitor             monitor progress
   \-morphology method kernel
                        apply a morphology method to the image
@@ -269,6 +270,7 @@ Image Operators:
 Image Sequence Operators:
   \-affinity filename   transform image colors to match this set of colors
   \-append              append an image sequence top to botto (use +append for left to right)
+  \-compare             mathematically and visually annotate the difference between an image and its reconstruction
   \-clut                apply a color lookup table to the image
   \-coalesce            merge a sequence of images
   \-combine             combine a sequence of images
