@@ -30,6 +30,8 @@
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23923).
   * The -fx option no longer crashes for certain expressions (reference
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23932).
+  * Add support for the -compare option (e.g. convert image.png reference.png
+    -compare -format "%[distortion]" info:).
 
 2013-08-06  6.8.6-8 Cristy  <quetzlzacatenango@image...>
   * New version 6.8.6-8, SVN revision 12918.
